[gd_scene load_steps=7 format=3 uid="uid://0pmn0ix4fug2"]

[ext_resource type="Script" uid="uid://cr8r2i6e3b48v" path="res://scripts/SceneSelection.gd" id="1_tmd3s"]
[ext_resource type="PackedScene" uid="uid://dvmddytlm4qdp" path="res://tscns/ChessBoard.tscn" id="2_1dh3a"]
[ext_resource type="PackedScene" uid="uid://borg7m0ifaxu8" path="res://tscns/Background.tscn" id="2_hhvh6"]
[ext_resource type="PackedScene" uid="uid://crra53ceh8s73" path="res://tscns/CardSelection.tscn" id="3_l1ay0"]
[ext_resource type="PackedScene" uid="uid://bn2qq1maxv1o3" path="res://tscns/GreetingOverlay.tscn" id="5_h0uw1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1ay0"]
bg_color = Color(1, 1, 1, 1)

[node name="SceneSelection" type="Node"]
script = ExtResource("1_tmd3s")

[node name="Background" parent="." instance=ExtResource("2_hhvh6")]

[node name="ChessBoard" parent="." instance=ExtResource("2_1dh3a")]
offset_top = 229.0
offset_bottom = 229.0

[node name="CardSelection" parent="." instance=ExtResource("3_l1ay0")]

[node name="ThinkingOverlay" type="CanvasLayer" parent="."]

[node name="ThinkingOverlayUI" type="CenterContainer" parent="ThinkingOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ThinkingContainer" type="PanelContainer" parent="ThinkingOverlay/ThinkingOverlayUI"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="ThinkingLabel" type="Label" parent="ThinkingOverlay/ThinkingOverlayUI/ThinkingContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "AI Is Thinking..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChessFontOverlay" type="CanvasLayer" parent="."]
visible = false

[node name="ChessFontOverlayUI" type="CenterContainer" parent="ChessFontOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ChessFontContainer" type="PanelContainer" parent="ChessFontOverlay/ChessFontOverlayUI"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l1ay0")

[node name="ChessFontLabel" type="Label" parent="ChessFontOverlay/ChessFontOverlayUI/ChessFontContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Empty white square: z
White Pc on White Sq: K, Q, R, B, N, P
Black Pc on White Sq: L, W, T, V, M, O
Empty black square: x
White Pc on Black Sq: k, q, r, b, n, p
Black Pc on Black Sq: l, w, t, v, m, o
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GreetingOverlay" parent="." instance=ExtResource("5_h0uw1")]
scene_greeting_file = "res://data/greetings/scene.json"
